# SWC-Club-Portal

./: manage.py  pyproject.toml
portal/: views.py
swc_club_portal/: asgi.py  settings.py  urls.py  wsgi.py
