[tool.poetry]
name = "swc_club_portal_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
Django = "^4.1.3"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
Django = "^4.1.3"
Pillow = "^9.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
